--- a/appscpec.yml
+++ b/appscpec.yml
@@ -1,24 +1,26 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
-    destination: /var/www/ssr-app/
-    overwrite: true
-file_exists_behavior: OVERWRITE
+    destination: /var/www/ssr-app
 
 hooks:
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: root
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
       runas: ec2-user
+
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
+
   AfterInstall:
-    - location: scripts/install_dependencies.sh
+    - location: scripts/after_install.sh # Nome do script atualizado
       timeout: 300
       runas: ec2-user
+
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
